Added ckeditor for admins. And added posts.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -217,6 +217,25 @@
         .search-btn:hover {
             background: #1f6391;
         }
+        .post-content h1,
+        .post-content h2,
+        .post-content h3 {
+            margin-top: 25px;
+        }
+
+        .post-content img {
+            height: auto;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+        }
+
+        .post-content p {
+            line-height: 1.6;
+            margin-bottom: 16px;
+        }
+
+        .post-content ul {
+            padding-left: 20px;
+        }
     </style>
 </head>
 <body>
