--- a/main/templates/posts/post_detail.html
+++ b/main/templates/posts/post_detail.html
@@ -10,9 +10,9 @@
             Токен: {{ post.token.name }}
         </div>
 
-        <p>
-            {{ post.content|linebreaks }}
-        </p>
+        <div class="post-content">
+            {{ post.content|safe }}
+        </div>
 
         {% if post.driver_link %}
             <p>
