--- a/main/templates/posts/post_list.html
+++ b/main/templates/posts/post_list.html
@@ -40,13 +40,14 @@
 {% for post in posts %}
     <div class="post-card">
 
-        {% if post.image %}
-        <div class="post-cover">
-            <a href="{% url 'post_detail' post.id %}">
-                <img src="{{ post.image.url }}" alt="{{ post.title }}">
-            </a>
-        </div>
+       {% if post.image %}
+            <div class="post-cover">
+                <a href="{% url 'post_detail' post.id %}">
+                    <img src="{{ post.image }}" alt="{{ post.title }}">
+                </a>
+            </div>
         {% endif %}
+
 
         <div class="post-body">
             <h3>
